Top bar text logo style change. Sharing button issue on smaller screen fixed Footer links color changed banner area 300px wide as on the referance site OnHove effect removed from Related Posts just keeping the title overlay.

--- a/assets/css/colors/blue.css
+++ b/assets/css/colors/blue.css
@@ -12,10 +12,6 @@
 
    
 /* ====== color 1 =====*/
-.logo a span {
-	color: #02324e;
-}
-
 #mainnav li.active-cta a:hover,
 #mainnav li.active  a,
 #nav .navbar-toggle:hover,
