--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,9 +83,12 @@
 	padding: 0;
 	outline: none;
 	
+	/*
 	-webkit-transition: all 0.3s ease;
 	   -moz-transition: all 0.3s ease;
 			transition: all 0.3s ease;
+	
+	*/
 } 
 
 body {
@@ -324,8 +327,19 @@ h4, h5, h6 {
 }
 
 /*  ===== 2.1.2 = Logo ===== */
+.logo a span {
+	color: #fff;
+	font-weight: 800;
+}
+
+.logo b {
+	font-size: 18px;
+	font-weight: 400;
+	opacity: 0.7;
+}
+
 .logo h2 {
-	font-size: 36px;
+	font-size: 40px;
 }
 
 .logo a {
@@ -522,6 +536,7 @@ h4, h5, h6 {
 .social-share {
 	background-color: #fff;
 	z-index: 999 !important;
+    margin: 20px auto;	
 }
 
 .social-share li a {
@@ -846,6 +861,7 @@ h4, h5, h6 {
 /*  ===== 2.6.2 = Footer links ===== */
 .footer-links li  {
 	margin: 5px;
+	font-weight: 700;
 }
 
 .footer-links li a:hover {
@@ -903,6 +919,12 @@ h4, h5, h6 {
 .sidebar-widget.image-banner,
 .sidebar-widget.script-banner {
 	background-color: transparent;
+}
+
+.sidebar-widget.image-banner .widget-content,
+.sidebar-widget.script-banner .widget-content {
+	max-width: 300px;
+    margin: 0 auto;
 }
 
 .sidebar-widget.image-banner img,
@@ -1073,8 +1095,7 @@ h4, h5, h6 {
 /*  ===== 4.1.1 = Settings ===== */
 .widget .widget-title {
 	position: relative;
-	color: #fff;
-	opacity: 0.7;
+	color: #f5c800;
 	font-weight: 600;
 	display: block;
 	border-bottom: solid 1px #3E4348;
@@ -1103,10 +1124,12 @@ h4, h5, h6 {
 	font-size: 14px;
 	padding: 5px 0;
 	display: block;
+	color: #fff;
+    font-weight: 600;
 }
 
 .widget_nav_menu .widget-content li a:hover {
-	color: #fff;
+	opacity: 0.7;
 }
 
 .widget_nav_menu .widget-content li:before {
@@ -1126,7 +1149,8 @@ h4, h5, h6 {
 /*  ===== 5.1 = Smaller Desktops ===== */
 @media only screen and (max-width: 1200px) {
     .logo h2 {
-		font-size: 26px;
+		font-size: 32px;
+		margin-top: 8px;
 	}
 	
 	.logo > span {
@@ -1135,6 +1159,10 @@ h4, h5, h6 {
 	
 	.footer-links li {
 		font-size: 12px;
+	}
+	
+	.social-share {
+		min-width: 675px !important;
 	}
 	
 	.social-share li a {
@@ -1188,6 +1216,11 @@ h4, h5, h6 {
 	
 	.navbar-fixed-top #mainnav li  a {
 		margin: 4px;
+	}
+	
+	.social-share {
+		min-width: 100% !important;
+	    top: 35px !important;
 	}
 	
 	.footer-widgets .col-md-3 {
@@ -1254,6 +1287,12 @@ h4, h5, h6 {
 		padding-bottom: 8px;
 	}
 	
+	.social-share {
+		min-width: 1px !important;
+		padding-bottom: 0px;
+	    margin: 18px auto;	
+	}
+	
 	.footer-widgets .col-md-3 {
 		margin-bottom: 35px;
 		margin-top: 35px;
@@ -1300,7 +1339,7 @@ h4, h5, h6 {
 	}
 	
 	.social-share li:last-child {
-		padding-right: 0px;
+	
 	}
 
 	.social-share li a {
